--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet" />
   <!-- Bootstrap icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+  <!-- Reset de estilos padrão -->
+  <link rel="stylesheet" href="assets/css/reset.css" />
   <!-- Meus códigos-fonte -->
   <link rel="stylesheet" href="assets/css/style.css" />
   <script defer src="assets/js/script.js"></script>
 </head>
-<body>
+<body class="centered">
   <div class="container">
     <div class="form">
       <h3>Confira o clima de uma cidade:</h3>
@@ -28,7 +30,7 @@
     </div>
     <!-- Dados gerais sobre o tempo consumidos através da "Weather API": https://openweathermap.org/api -->
     <div id="weather-data" class="hide">
-      <h2>
+      <h2 class="centered">
         <i class="bi bi-geo-alt-fill"></i>
         <span id="city"></span>
         <!-- Imagem consumida através da "Flags API": https://flagsapi.com/ -->
@@ -42,15 +44,15 @@
         <span></span>&deg;C
       </p>
       <!-- Condição -->
-      <div id="description-container">
+      <div id="description-container" class="centered">
         <p id="description"></p>
         <img
           src=""
           alt="Condição do tempo"
           id="weather-icon" />
       </div>
-      <div id="details-container">
-        <!-- Humidade -->
+      <div id="details-container" class="centered">
+        <!-- Umidade -->
         <p id="humidity">
           <i class="bi bi-droplet-fill"></i>
           <span></span>
